# anitrack-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: release.md  usage.md
src/: app.rs  cli.rs  db.rs  http.rs  main.rs  paths.rs
src/app/: episode.rs  mod.rs  tests.rs  tracking.rs  tui.rs
src/app/tracking/: api.rs  history.rs  mod.rs  playback.rs  process.rs
src/app/tui/: actions.rs  mod.rs  render.rs  session.rs
