[package]
name = "anitrack"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[[bin]]
name = "anitrack"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dirs = "5.0"
libc = "0.2"
ratatui = "0.29"
rusqlite = { version = "0.32", features = ["bundled"] }
