[package]
name = "anitrack"
version = "0.1.5"
edition = "2024"
license = "GPL-3.0-or-later"
description = "CLI/TUI companion for ani-cli with watch-progress tracking"
repository = "https://github.com/MiguelRegueiro/anitrack-cli"
homepage = "https://github.com/MiguelRegueiro/anitrack-cli"
keywords = ["anime", "cli", "tui", "tracking", "ani-cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "anitrack"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dirs = "5.0"
libc = "0.2"
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
rusqlite = { version = "0.32", features = ["bundled"] }
